--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,28 +5,13 @@
 }
 
 window#waybar {
-	color: white;
 	background-color: transparent;
-	transition-property: background-color;
-	transition-duration: .5s;
-}
-
-window#waybar.hidden {
-	opacity: 0.2;
-}
-
-button {
-	/* Use box-shadow instead of border so the text isn't offset */
-	box-shadow: inset 0 -3px transparent;
-	/* Avoid rounded borders under each button name */
-	border: none;
-	border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
 	background: inherit;
-	box-shadow: inset 0 -3px #ffffff;
+	box-shadow: inset 0 0px #ffffff;
 }
 
 /* you can set a style on hover for any module like this */
@@ -35,19 +20,23 @@ button:hover {
 }
 
 #workspaces {
-	border: solid 2px #64727d;
-	border-radius: 11px;
+	border: solid 2px #33ccff;
+	border-radius: 12px;
+	margin: 8px;
 }
 
 #workspaces button {
 	background-color: transparent;
-	border-radius: 7px;
+	border-radius: 8px;
 	color: #ffffff;
-	padding: 0 3px;
+	padding: 0 2px;
+	margin: 5px;
 }
 
 #workspaces button.active {
-	background-color: #64727d;
+	background-color: transparent;
+	border: 3px solid #00ff99;
+	padding: 0px 8px;
 }
 
 #workspaces button.urgent {
@@ -59,44 +48,14 @@ button:hover {
 	box-shadow: inset 0 -3px #ffffff;
 }
 
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#mpd {
-	padding: 0 10px;
-	color: #ffffff;
-}
-
-#window,
-#workspaces {
-	margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-	margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-	margin-right: 0;
-}
-
 #clock {
-	background-color: #64727D;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	margin-right: 15px;
+	padding: 0px 10px;
 }
 
 #battery {
@@ -110,10 +69,10 @@ button:hover {
 }
 
 @keyframes blink {
-to {
-	background-color: #ffffff;
-	color: #000000;
-}
+	to {
+		background-color: #ffffff;
+		color: #000000;
+	}
 }
 
 /* Using steps() instead of linear as a timing function to limit cpu usage */
@@ -151,12 +110,24 @@ label:focus {
 }
 
 #cpu {
-	background-color: #2ecc71;
-	color: #000000;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-left: 0;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 8px;
 }
 
 #memory {
-	background-color: #9b59b6;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-right: 0;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	margin-left: 15px;
+	padding: 0px 8px;
 }
 
 #disk {
@@ -168,11 +139,16 @@ label:focus {
 }
 
 #network {
-	background-color: #2980b9;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 10px;
 }
 
 #network.disconnected {
-	background-color: #f53c3c;
+	border-color: #f53c3c;
 }
 
 #pulseaudio {
@@ -186,12 +162,16 @@ label:focus {
 }
 
 #wireplumber {
-	background-color: #fff0f5;
-	color: #000000;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 10px;
 }
 
 #wireplumber.muted {
-	background-color: #f53c3c;
+	border-color: #f53c3c;
 }
 
 #custom-media {
@@ -217,7 +197,13 @@ label:focus {
 }
 
 #tray {
-	background-color: #2980b9;
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	margin-right: 15px;
+	padding: 0px 10px;
 }
 
 #tray > .passive {
@@ -226,7 +212,7 @@ label:focus {
 
 #tray > .needs-attention {
 	-gtk-icon-effect: highlight;
-	background-color: #eb4d4b;
+	border-color: #eb4d4b;
 }
 
 #idle_inhibitor {
