--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,4 @@
 * {
-	/* `otf-font-awesome` is required to be installed for icons */
 	font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	font-size: 14px;
 }
@@ -8,21 +7,83 @@ window#waybar {
 	background-color: transparent;
 }
 
+label:focus {
+	background-color: #000000;
+}
+
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
 	background: inherit;
 	box-shadow: inset 0 0px #ffffff;
 }
 
-/* you can set a style on hover for any module like this */
-#pulseaudio:hover {
-	background-color: #a37800;
+#memory {
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-right: 0;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	margin-left: 15px;
+	padding: 0px 8px;
+}
+
+#cpu {
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-left: 0;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 8px;
+}
+
+#privacy {
+	padding: 0;
+}
+
+#privacy-item {
+	padding: 0 5px;
+	color: white;
+}
+
+#privacy-item.screenshare {
+	background-color: #cf5700;
+}
+
+#privacy-item.audio-in {
+	background-color: #1ca000;
+}
+
+#privacy-item.audio-out {
+	background-color: #0069d4;
+}
+
+#bluetooth {
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 8px;
+}
+
+#bluetooth.connected {
+	border-color: #2ecc71;
+}
+
+#bluetooth.disabled {
+	border-color: #f53c3c;
+}
+
+#bluetooth.no-controller {
+	border-color: #f53c3c;
 }
 
 #workspaces {
 	border: solid 2px #33ccff;
 	border-radius: 12px;
-	margin: 8px;
+	margin: 6px;
 }
 
 #workspaces button {
@@ -43,22 +104,7 @@ button:hover {
 	background-color: #eb4d4b;
 }
 
-#mode {
-	background-color: #64727D;
-	box-shadow: inset 0 -3px #ffffff;
-}
-
-#clock {
-	background-color: transparent;
-	border: 2px solid #33ccff;
-	border-radius: 12px;
-	color: #ffffff;
-	margin: 8px 0px;
-	margin-right: 15px;
-	padding: 0px 10px;
-}
-
-#battery {
+#wireplumber {
 	background-color: transparent;
 	border: 2px solid #33ccff;
 	border-radius: 12px;
@@ -67,14 +113,21 @@ button:hover {
 	padding: 0px 10px;
 }
 
-#battery.charging, #battery.plugged {
-	border-color: #2ecc71;
-}
-
-/* Using steps() instead of linear as a timing function to limit cpu usage */
-#battery.critical:not(.charging) {
+#wireplumber.muted {
 	border-color: #f53c3c;
-	border-width: 4px;
+}
+
+#network {
+	background-color: transparent;
+	border: 2px solid #33ccff;
+	border-radius: 12px;
+	color: #ffffff;
+	margin: 8px 0px;
+	padding: 0px 10px;
+}
+
+#network.disconnected {
+	border-color: #f53c3c;
 }
 
 #power-profiles-daemon {
@@ -98,36 +151,7 @@ button:hover {
 	border-color: #2ecc71;
 }
 
-label:focus {
-	background-color: #000000;
-}
-
-#cpu {
-	background-color: transparent;
-	border: 2px solid #33ccff;
-	border-left: 0;
-	border-radius: 12px;
-	color: #ffffff;
-	margin: 8px 0px;
-	padding: 0px 8px;
-}
-
-#memory {
-	background-color: transparent;
-	border: 2px solid #33ccff;
-	border-right: 0;
-	border-radius: 12px;
-	color: #ffffff;
-	margin: 8px 0px;
-	margin-left: 15px;
-	padding: 0px 8px;
-}
-
-#disk {
-	background-color: #964B00;
-}
-
-#backlight {
+#battery {
 	background-color: transparent;
 	border: 2px solid #33ccff;
 	border-radius: 12px;
@@ -136,62 +160,23 @@ label:focus {
 	padding: 0px 10px;
 }
 
-#network {
-	background-color: transparent;
-	border: 2px solid #33ccff;
-	border-radius: 12px;
-	color: #ffffff;
-	margin: 8px 0px;
-	padding: 0px 10px;
+#battery.charging, #battery.plugged {
+	border-color: #2ecc71;
 }
 
-#network.disconnected {
+#battery.critical:not(.charging) {
 	border-color: #f53c3c;
+	border-width: 4px;
 }
 
-#pulseaudio {
-	background-color: #f1c40f;
-	color: #000000;
-}
-
-#pulseaudio.muted {
-	background-color: #90b1b1;
-	color: #2a5c45;
-}
-
-#wireplumber {
+#clock {
 	background-color: transparent;
 	border: 2px solid #33ccff;
 	border-radius: 12px;
 	color: #ffffff;
 	margin: 8px 0px;
+	margin-right: 15px;
 	padding: 0px 10px;
-}
-
-#wireplumber.muted {
-	border-color: #f53c3c;
-}
-
-#custom-media {
-	background-color: #66cc99;
-	color: #2a5c45;
-	min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-	background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-	background-color: #ffa000;
-}
-
-#temperature {
-	background-color: #f0932b;
-}
-
-#temperature.critical {
-	background-color: #eb4d4b;
 }
 
 #tray {
@@ -211,83 +196,4 @@ label:focus {
 #tray > .needs-attention {
 	-gtk-icon-effect: highlight;
 	border-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-	background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-	background-color: #ecf0f1;
-	color: #2d3436;
-}
-
-#mpd {
-	background-color: #66cc99;
-	color: #2a5c45;
-}
-
-#mpd.disconnected {
-	background-color: #f53c3c;
-}
-
-#mpd.stopped {
-	background-color: #90b1b1;
-}
-
-#mpd.paused {
-	background-color: #51a37a;
-}
-
-#language {
-	background: #00b093;
-	color: #740864;
-	padding: 0 5px;
-	margin: 0 5px;
-	min-width: 16px;
-}
-
-#keyboard-state {
-	background: #97e1ad;
-	color: #000000;
-	padding: 0 0px;
-	margin: 0 5px;
-	min-width: 16px;
-}
-
-#keyboard-state > label {
-	padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-	background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-	background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-	background-color: transparent;
-}
-
-#privacy {
-	padding: 0;
-}
-
-#privacy-item {
-	padding: 0 5px;
-	color: white;
-}
-
-#privacy-item.screenshare {
-	background-color: #cf5700;
-}
-
-#privacy-item.audio-in {
-	background-color: #1ca000;
-}
-
-#privacy-item.audio-out {
-	background-color: #0069d4;
 }
